syntax = "proto3";

option java_package = "io.assalielmehdi.helloworld.grpc";
option java_multiple_files = true;
option java_outer_classname = "HelloWorldProto";

package helloworld;

service HelloWorld {
  rpc sayHelloWorld (HelloWorldRequest) returns (HelloWorldResponse) {}
}

message HelloWorldRequest {
  int32 numberOfMessages = 1;
}

message HelloWorldResponse {
  repeated string messages = 1;
}